--- a/src/pages/admin-create-customer/admin-create-customer.scss
+++ b/src/pages/admin-create-customer/admin-create-customer.scss
@@ -2,7 +2,33 @@ page-admin-create-customer {
     ion-content{
         ion-list{
             margin:10px;
-            
+            .error-message
+{
+  color: red;
+  font-size: 14px;
+  margin-left: 10px;
+  margin-top: 10px;
+}
+
+
         } 
+    }
+
+
+    ion-footer {
+        background: white;
+        border:none;
+        button {
+            margin: auto;
+            display: block;
+            height: 50px;
+            width: 100%;
+            background-color: #488aff;
+            font-size: 1.4rem;
+            font-weight: 500;
+            text-transform: uppercase;
+            color: #fff;
+            
+        }
     }
 }
