--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -3,5 +3,15 @@ page-home {
         display: block;
         margin-bottom: 50%;
         margin-top: 50%;
+        .submit-btn {
+            width: 100%;
+            height: 40px;
+            background: #e815e8;
+            font-style: normal;
+            color: white;
+            text-transform: uppercase;
+            font-size: 1.6em;
+            border-radius: 25px;
+        }
     }
 }
