--- a/src/pages/admin-assign-engg/admin-assign-engg.scss
+++ b/src/pages/admin-assign-engg/admin-assign-engg.scss
@@ -1,5 +1,16 @@
 page-admin-assign-engg {
-    ion-content {  
+    #backBtn {
+        .back-button {
+            display: block;
+        }
+    }
+    #searchEngg{
+        ion-title {
+            width: 80%;
+            float: left;
+        }
+    }
+    ion-content { 
     section{
         margin:10px;
         table, th, td {
