--- a/src/pages/admin-create-customer/admin-create-customer.scss
+++ b/src/pages/admin-create-customer/admin-create-customer.scss
@@ -9,6 +9,9 @@ page-admin-create-customer {
   margin-left: 10px;
   margin-top: 10px;
 }
+item-right{
+    width: auto;
+}
 button {
     margin: auto;
     display: block;
