--- a/src/pages/admin-view-previous/admin-view-previous.scss
+++ b/src/pages/admin-view-previous/admin-view-previous.scss
@@ -1,5 +1,7 @@
 page-admin-view-previous {
-table{
-    margin: 10px;
-}
+    ion-card{
+        ion-card-header{
+            text-align: center;
+        }
+    }
 }
